# fs-ama

./: 01_parse_and_plot_scraped_fs_data.ipynb  README.md  index.html  pyproject.toml
fscrawl/: fs-episodes.json  scrapy.cfg
fscrawl/episode_transcripts/: FS136.vtt  FS147.vtt  FS206.vtt  FS208.vtt  FS209.vtt  FS210.vtt  FS211.vtt  FS212.vtt  FS213.vtt  FS214.vtt  FS215.vtt  FS216.vtt  FS217.vtt  FS218.vtt  FS219.vtt  FS220.vtt  FS221.vtt  FS222.vtt  FS223.vtt  FS224.vtt  FS225.vtt  FS226.vtt  FS228.vtt  FS230.vtt  FS231.vtt  FS232.vtt  FS234.vtt  FS235.vtt  FS236.vtt  FS237.vtt  FS238.vtt  FS239.vtt  FS240.vtt  FS241.vtt  FS242.vtt  FS243.vtt  FS244.vtt  FS246.vtt  FS247.vtt  FS248.vtt  (+32 more)
fscrawl/fscrawl/: items.py  middlewares.py  pipelines.py  settings.py
fscrawl/fscrawl/spiders/: fs_episode_spider.py
plots/: bar_speaker_durations_over_episodes.html  density_heatmap_episode_durations_over_years_and_months.html  icicle_speaker_durations_speaker>year>month>episode.html  icicle_speaker_durations_year>month>episode>speaker.html  line_cumsum_speaker_durations_over_time.html  scatter_duration_vs_date.html  scatter_duration_vs_n_guests.html  sunburst_speaker_durations_speaker>year>month>episode.html  sunburst_speaker_durations_year>month>episode>speaker.html  treemap_speaker_durations_speaker>year>month>episode.html  treemap_speaker_durations_year>month>episode>speaker.html
