[tool.poetry]
name = "fsama"
version = "0.1.0"
description = ""
authors = ["Andreas Fleck <fleckiiiiiiiimit8i+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Scrapy = "^2.11.1"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
pyarrow = "^16.0.0"
pydantic = "^2.7.1"
langchain = "^0.1.20"
streamlit = "^1.34.0"
sentence-transformers = "^2.7.0"
ipywidgets = "^8.1.2"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.6"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
langchain-chroma = "^0.1.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
